<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Auth.LoginActivity">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="cursive"
        android:textSize="62dp"
        android:alpha="0"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textSize="20dp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="116dp"
        android:alpha="0"
        android:padding="12dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dguitarclassic.intermediate.CustomView.InputTextPassword
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/btn_login" />

    <com.dguitarclassic.intermediate.CustomView.InputTextEmail
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="12dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:alpha="0"
        android:layout_marginTop="12dp"
        android:src="@drawable/logo_dicoding"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/logo_bangkit"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:alpha="0"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:text="@string/powered_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:alpha="0"
        android:text="@string/welcome_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />
</androidx.constraintlayout.widget.ConstraintLayout>